# dotfiles

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Brewfile  LICENSE  README.md  README_NEW.md  setup.sh
databricks/: .databrickscfg.template  README.md
git/: .gitattributes  .gitconfig  .gitconfig_mac  .gitignore_global  README.md
pip/: README.md  pip.conf  pip.conf.template
slack/: README.md
templates/: .env.template  README.md  pyproject.toml
ubuntu/: .inputrc
vscode/: README.md  extensions.json  settings.json
zsh/: .zshrc  .zshrc_local.template  README.md
