# =============================================================================
# Python Project Configuration Template
# =============================================================================
# This is a template pyproject.toml for data science projects
# Copy this to your project root and customize as needed

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

# =============================================================================
# Dependencies
# =============================================================================
dependencies = [
    # Core data science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",  # Fast Parquet I/O
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    
    # Machine Learning (uncomment as needed)
    # "scikit-learn>=1.3.0",
    # "xgboost>=2.0.0",
    # "lightgbm>=4.0.0",
    
    # Deep Learning (uncomment as needed)
    # "torch>=2.0.0",
    # "tensorflow>=2.13.0",
    
    # Azure & Databricks
    # "databricks-sdk>=0.12.0",
    # "azure-storage-blob>=12.17.0",
    # "azure-identity>=1.13.0",
    # "azure-keyvault-secrets>=4.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    
    # Linting & Formatting
    "ruff>=0.1.0",
    
    # Type Checking
    "mypy>=1.5.0",
    "pandas-stubs>=2.0.0",
    
    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    
    # Pre-commit
    "pre-commit>=3.3.0",
]

# =============================================================================
# Ruff Configuration (Linter & Formatter)
# =============================================================================
# https://docs.astral.sh/ruff/

[tool.ruff]
# Set the maximum line length
line-length = 88

# Assume Python 3.9+
target-version = "py39"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule sets
# See: https://docs.astral.sh/ruff/rules/
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PD",     # pandas-vet
    "NPY",    # numpy-specific rules
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "PD901",  # Avoid using 'df' as variable name (too common in DS)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore import rules in __init__.py
"__init__.py" = ["F401", "F403"]
# Ignore all checks in notebooks
"*.ipynb" = ["ALL"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Show extra test summary info
addopts = [
    "-ra",                    # Show all test outcomes
    "--strict-markers",       # Strict marker handling
    "--strict-config",        # Strict config
    "--cov=src",             # Coverage for src directory
    "--cov-report=term-missing", # Show missing lines
    "--cov-report=html",      # Generate HTML coverage report
]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# =============================================================================
# MyPy Configuration (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
ignore_missing_imports = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

# =============================================================================
# Black Configuration (if not using Ruff for formatting)
# =============================================================================
# [tool.black]
# line-length = 88
# target-version = ['py39']
# include = '\.pyi?$'
# extend-exclude = '''
# /(
#   \.git
#   | \.venv
#   | build
#   | dist
# )/
# '''

# =============================================================================
# isort Configuration (if not using Ruff for import sorting)
# =============================================================================
# [tool.isort]
# profile = "black"
# line_length = 88
# multi_line_output = 3
# include_trailing_comma = true
